@@ -2,8 +2,8 @@
 - content_for :styles do
 
   - if models.include?(:account)
-    li.account .none { background:pink; }
-    li.account .some { background:palegreen; }
+    li.account .none { background: gainsboro; color: white; }
+    li.account .some { background: palegreen; }
   
   - if models.include?(:campaign)
     - Setting.campaign_status_color.each do |key, value|
