@@ -245,7 +245,7 @@
     :margin 0px 4px 0px 0px
 
   .strip
-    :margin 0px 5px 0px 0px
+    :margin 0px 6px 0px 0px
 
 // Two-row lists.
 //------------------------------------------------------------------------------
@@ -264,6 +264,10 @@
     :list-style none
     :padding 6px 0px 6px 0px
 
+    .gravatar
+      :float left
+      :padding 0px 10px 5px 0px
+
     tt
       :color dimgray
       :font-size 11px
@@ -273,19 +277,19 @@
       :font-size 11px
       :padding 2px 0px 0px 0px
 
-    tt a:link, tt a:visited, dt a:link, dt a:visited
+    dt a:link, dt a:visited
       :color #3f3f3f
       :font-weight bold
       :text-decoration none
 
-    tt a:hover, dt a:hover
+    dt a:hover
       :background dimgray
       :color white
       :font-weight bold
       :text-decoration none
 
   .strip
-    :margin 2px 5px 20px 0px
+    :margin 2px 11px 20px 0px
 
 // Sidebar, filters, and selectors.
 //------------------------------------------------------------------------------
