@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sat, Feb 28, 2008
+---------------------------------------------------------------------
+- Added gravatar support for leads and contacts.
+
 Fri, Feb 27, 2008
 ---------------------------------------------------------------------
 - Added [gravatar] plugin and implemented gravatars for notes.
